--- a/kostentabelle.html
+++ b/kostentabelle.html
@@ -35,28 +35,37 @@
           <tbody>
             <tr>
               <td>Torten</td>
-              <td>16 cm · 8–10 Stücke</td>
-              <td>45 €</td>
+              <td>26 cm / 12 Stücke</td>
+              <td>80 €</td>
             </tr>
             <tr>
-              <td>Hochzeitstorten</td>
-              <td>2–3 Etagen</td>
-              <td>180 €</td>
+              <td>Torte</td>
+              <td>20 cm</td>
+              <td>50 €</td>
             </tr>
             <tr>
-              <td>Petit Fours</td>
-              <td>12 Stück</td>
-              <td>28 €</td>
+              <td>Torten</td>
+              <td>ab 2 Etagen</td>
+              <td>ab 150 €</td>
             </tr>
             <tr>
               <td>Macarons</td>
-              <td>12 Stück</td>
-              <td>22 €</td>
+              <td>ab 10 Stück<br>
+                  ab 30 Stück<br>
+                  ab 50 Stück</td>
+              <td>20 €<br>
+                  50 €<br>
+                  80 €</td>
             </tr>
             <tr>
               <td>Cupcakes</td>
-              <td>12 Stück</td>
-              <td>26 €</td>
+              <td>1 Stück</td>
+              <td>4 €</td>
+            </tr>
+            <tr>
+              <td>Cake Pops</td>
+              <td>1 Stück</td>
+              <td>3 €</td>
             </tr>
           </tbody>
         </table>
