--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Jedes Stück ist ein kleines Kunstwerk – geschaffen mit Ruhe, Präzision und L
 
             <div class="soft-glass-card">
                 <div class="product-image">
-                    <img src="assets/Torte.jpeg" alt="Torten">
+                    <img src="assets\Sahnetorte.jpeg" alt="Sahnetorte">
                 </div>
                 <h3 class="product-name">Sahnetorte</h3>
             </div>
