Kostentabelle in Preistabelle geändert

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@ Jedes Stück ist ein kleines Kunstwerk – geschaffen mit Ruhe, Präzision und L
                 <a href="gallery.html" class="cta-button outline">
                     Zur Galerie
                 </a>
-                <a href="kostentabelle.html" class="cta-button outline">
-                    Kostentabelle
+                <a href="preistabelle.html" class="cta-button outline">
+                    Preistabelle
                 </a>
             </div>
 
